--- a/source/code/intern/compiler/data/data.vcxproj
+++ b/source/code/intern/compiler/data/data.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="..\..\src\data\data.unloadPhase.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\data\data.commandAction.h" />
     <ClInclude Include="..\..\src\data\data.entity.h" />
     <ClInclude Include="..\..\src\data\data.entityCategory.h" />
     <ClInclude Include="..\..\src\data\data.entityFolder.h" />
